Changed stuff in README

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "electronlauncher",
   "version": "1.6.0",
-  "productName": "Electron Launcher",
+  "productName": "Nytro Electron Launcher",
   "description": "Modded Minecraft Launcher",
   "author": "Daniel Scalzi (https://github.com/dscalzi/)",
   "license": "UNLICENSED",
-  "homepage": "https://github.com/dscalzi/ElectronLauncher",
+  "homepage": "https://github.com/dscalzi/NytroElectronLauncher",
   "bugs": {
     "url": "https://github.com/dscalzi/ElectronLauncher/issues"
   },
@@ -47,6 +47,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dscalzi/ElectronLauncher.git"
+    "url": "git+https://github.com/nyzzik/NytroElectronLauncher.git"
   }
 }
