--- a/.travis.yml
+++ b/.travis.yml
@@ -42,3 +42,12 @@ before_cache:
 branches:
   except:
     - "/^v\\d+\\.\\d+\\.\\d+$/"
+
+deploy:
+  provider: releases
+  skip_cleanup: true
+  draft: true
+  file: 
+   - dist/*
+  on:
+    repo: nyzzik/NytroElectronLauncher
