--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "nytrolauncher",
-  "version": "1.6.0",
-  "productName": "Nytro Electron Launcher",
+  "name": "helioslauncher",
+  "version": "1.7.0",
+  "productName": "NytroLauncher",
   "description": "Modded Minecraft Launcher",
-  "author": "nyzzik (https://github.com/nyzzik/)",
+  "author": "nyzzik (https://github.com/nyzzik/",
   "license": "UNLICENSED",
-  "homepage": "https://github.com/nyzzik/NytroElectronLauncher",
+  "homepage": "https://github.com/nyzzik/NytroLauncher",
   "bugs": {
-    "url": "https://github.com/nyzzik/NytroElectronLauncher/issues"
+    "url": "https://github.com/nyzzik/NytroLauncher/issues"
   },
   "private": true,
   "main": "index.js",
@@ -27,10 +27,10 @@
   "dependencies": {
     "adm-zip": "^0.4.13",
     "async": "^3.1.0",
-    "discord-rpc": "3.0.2",
-    "ejs": "^2.6.2",
+    "discord-rpc": "3.1.0",
+    "ejs": "^2.7.2",
     "ejs-electron": "^2.0.3",
-    "electron-updater": "^4.1.2",
+    "electron-updater": "^4.2.0",
     "fs-extra": "^8.1.0",
     "github-syntax-dark": "^0.5.0",
     "jquery": "^3.4.1",
@@ -40,13 +40,13 @@
     "winreg": "^1.2.4"
   },
   "devDependencies": {
-    "cross-env": "^5.2.0",
-    "electron": "^6.0.4",
+    "cross-env": "^6.0.3",
+    "electron": "^7.1.1",
     "electron-builder": "^21.2.0",
-    "eslint": "^6.2.2"
+    "eslint": "^6.6.0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nyzzik/NytroElectronLauncher.git"
+    "url": "git+https://github.com/nyzzik/NytroLauncher.git"
   }
 }
