--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nytrolauncher",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.1",
   "productName": "Nytro Launcher",
   "description": "Modded Minecraft Launcher",
   "author": "nyzzik (https://github.com/nyzzik/)",
